make modifications to the user,cart, product controllers
